--- a/egs/librispeech_spkv/v2/conf/mfcc.conf
+++ b/egs/librispeech_spkv/v2/conf/mfcc.conf
@@ -4,3 +4,4 @@
 --high-freq=3700 # the default is zero meaning use the Nyquist (4k in this case).
 --num-ceps=23 # higher than the default which is 12.
 --snip-edges=false
+--allow-downsample=true
